@@ -7,6 +7,9 @@ export(simCorVars,
        glog,
        glog10,
        glog2,
+       inv.glog,
+       inv.glog10,
+       inv.glog2,
        melt.long,
        mi.t.test,
        ssize.pcc,
