@@ -4,3 +4,8 @@ glog <- function(x, base = exp(1)){
 }
 glog10 <- function(x){ glog(x, base = 10) }
 glog2 <- function(x){ glog(x, base = 2) }
+inv.glog <- function(x, base = exp(1)){
+  sinh(log(base)*x + log(2))
+}
+inv.glog10 <- function(x){ inv.glog(x, base = 10) }
+inv.glog2 <- function(x){ inv.glog(x, base = 2) }
