@@ -5,7 +5,8 @@
 ###########################################################
 ## Version 1.1
 ###########################################################
-- added new function glog, glog10, glog2 to compute generalized logarithm
+- added new function glog, glog10, glog2, inv.glog, inv.glog10, inv.glog2 to
+  compute the generalized logarithm and its inverse
 - added new function melt.long to transform a data.frame form wide to long
   form
 
